src-java/testing/functional-tests/src/main/groovy/org/openkilda/functionaltests/error/haflow/HaFlowNotUpdatedExpectedError.groovy
package org.openkilda.functionaltests.error.haflow

import org.openkilda.functionaltests.error.AbstractExpectedError
import org.springframework.http.HttpStatus

import java.util.regex.Pattern

class HaFlowNotUpdatedExpectedError extends AbstractExpectedError{
    final static HttpStatus statusCode = HttpStatus.BAD_REQUEST
    final static String message = "Couldn't update HA-flow"

    HaFlowNotUpdatedExpectedError(Pattern descriptionPattern) {
        super(statusCode, message, descriptionPattern)
    }
}
